# aoc

./: README.md  anxiety_of_conception_algorithm.ipynb  format.py  part_a.txt  pyproject.toml  requirements.txt  template.typ
paratext/: introduction.typ  technical-notes.typ
