[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
jupyter = "^1.1.1"
numpy = "^2.1.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.apie"
